--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+
 @import "tailwindcss";
+@theme {
+    --font-title: "Fredoka", sans-serif;
+}
+
+:root{
+    font-family: "Nunito", sans-serif;
+    font-weight: 600;
+}
